--- a/css-grid-classes/style.css
+++ b/css-grid-classes/style.css
@@ -2,9 +2,7 @@
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-  display: flex;
-  flex-wrap: wrap;
-  min-height: 100vh;
+
 
 
 }
@@ -32,5 +30,5 @@ img {
 }
 
 .column-fourths {
-  flex-basis: cacl(100% / 4);
+  flex-basis: calc(100% / 4);
 }
